--- a/aggietube/templates/index.html
+++ b/aggietube/templates/index.html
@@ -23,7 +23,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
       <div class="container">
-           <a class="navbar-brand" href="#"><img src="../static/img/AggieTube.png" style="max-width: 250px"/></a>
+           <a class="navbar-brand" href="/"><img src="../static/img/AggieTube.png" style="max-width: 250px"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -92,8 +92,41 @@
             </a>
           </div>
 -->
-          <div class="row">
+        <div class="row" style="padding-bottom: 45px; margin: 0 auto">
+            <div class="col-lg-12">
+                <form action="/" method="post">
+                    <div class="input-group">
+                      <input type="text" name="query" class="form-control" placeholder="Search for...">
+                      <span class="input-group-btn">
+                        <button class="btn btn-secondary" type="submit" >Search!</button>
+                      </span>
+                    </div>
+                </form>
+              </div>
+        </div>
 
+            <div class="row">
+
+
+
+              {% for video in videos %}
+                  <div class="col-lg-4 col-md-6 mb-4">
+                      <div class="card h-100">
+                        <a href="#"><img class="card-img-top" src="{{ video['thumbnail'] }}" alt=""></a>
+                        <div class="card-body">
+                          <h5 class="card-title">
+                            <a href="#">{{ video['title'] }}</a>
+                          </h5>
+                            <p class="card-text">{{ video['channel'] }}</p>
+                        </div>
+                        <div class="card-footer">
+                          <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
+                        </div>
+                      </div>
+                  </div>
+
+              {% endfor %}
+<!--
             <div class="col-lg-4 col-md-6 mb-4">
               <div class="card h-100">
                 <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
@@ -189,7 +222,7 @@
                 </div>
               </div>
             </div>
-
+            -->
           </div>
           <!-- /.row -->
 
