--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -112,13 +112,15 @@
               {% for video in videos %}
                   <div class="col-lg-4 col-md-6 mb-4">
                       <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="{{ video['thumbnail'] }}" alt=""></a>
-                        <div class="card-body">
-                          <h5 class="card-title">
-                            <a href="#">{{ video['title'] }}</a>
-                          </h5>
-                            <p class="card-text">{{ video['channel'] }}</p>
-                        </div>
+                        <a href="/play/{{ video['id'] }}">
+                            <img class="card-img-top" src="{{ video['thumbnail'] }}" alt="">
+                            <div class="card-body">
+                              <h5 class="card-title">
+                                {{ video['title'] }}
+                              </h5>
+                                <p class="card-text">{{ video['channel'] }}</p>
+                            </div>
+                        </a>
                         <div class="card-footer">
                           <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
                         </div>
