--- a/app/templates/play_video.html
+++ b/app/templates/play_video.html
@@ -21,12 +21,38 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
            <a class="navbar-brand" href="/"><img src="../static/img/AggieTube.png" style="max-width: 250px"/></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler"  type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div class="collapse navbar-collapse float-right"  id="navbarResponsive">
+          <ul class="navbar-nav ml-auto" >
+            <li class="nav-item active">
+              <a class="nav-link" href="/" >Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+          {% if not user %}
+               <li class="nav-item">
+                  <a class="nav-link" href="/login" >Login</a>
+               </li>
+          {% else  %}
+               <li class="nav-item">
+                  <a class="nav-link" href="/friends" >{{ user['username']  }}'s Friends</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link" href="/playlists" >{{ user['username']  }}'s Playlists</a>
+               </li>
+
+               <li class="nav-item">
+                  <a class="nav-link" href="/login" >Logout</a>
+               </li>
+          {% endif %}
+          </ul>
+        </div>
       </div>
     </nav>
 
