--- a/app/templates/playlist.html
+++ b/app/templates/playlist.html
@@ -66,13 +66,13 @@
                {% for video in list.each() %}
                   <div class="col-lg-4 col-md-6 mb-4">
                       <div class="card h-100">
-                        <a href="/play/{{ video['id'] }}">
-                            <img class="card-img-top" src="{{ video['thumbnail'] }}" alt="">
+                        <a href="/play/{{ video.val()['id'] }}">
+                            <img class="card-img-top" src="{{ video.val()['thumbnail'] }}" alt="">
                             <div class="card-body">
                               <h5 class="card-title">
-                                {{ video['title'] }}
+                                {{ video.val()['title'] }}
                               </h5>
-                                <p class="card-text">{{ video['channel'] }}</p>
+                                <p class="card-text">{{ video.val()['channel'] }}</p>
                             </div>
                         </a>
                       </div>
