--- a/app/templates/playlists.html
+++ b/app/templates/playlists.html
@@ -66,7 +66,7 @@
                {% for list in playlists.each() %}
                   <div class="col-lg-4 col-md-6 mb-4">
                       <div class="card h-100">
-                        <a href="/playlist">
+                        <a href="/playlist/{{ list.key() }}">
                             <div class="card-body">
                               <h5 class="card-title">
                                 {{ list.key() }}
