--- a/app/templates/friends.html
+++ b/app/templates/friends.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-12">
             <div class="row">
-
+            {% if friends %}
               {% for friend in friends.each() %}
                   <div class="col-lg-4 col-md-6 mb-4">
                       <div class="card h-100">
@@ -77,6 +77,8 @@
                   </div>
 
               {% endfor %}
+            {% endif %}
+
 
           </div>
           <!-- /.row -->
