--- a/app/templates/playlists.html
+++ b/app/templates/playlists.html
@@ -62,7 +62,7 @@
       <div class="row">
         <div class="col-lg-12">
             <div class="row">
-
+                {% if playlists %}
                {% for list in playlists.each() %}
                   <div class="col-lg-4 col-md-6 mb-4">
                       <div class="card h-100">
@@ -77,6 +77,7 @@
                   </div>
 
               {% endfor %}
+            {%  endif %}
 
           </div>
           <!-- /.row -->
